syntax = "proto3";

package DnD.service;

option java_package = "DnD.service";
option java_outer_classname = "ServerResponseOuterClass";

enum ServerResponseType {
    CONNECTION_SUCCESS = 0;
    CONNECTION_FAILURE = 1;
    CLIENT_DISCONNECTED = 2;

    TILE_GENERATION_RESPONSE = 3;
    PLAYER_UPDATE = 4;
}

message ServerResponse {
    ServerResponseType response = 1;
    bytes responseData = 2;
}