syntax = "proto3";

package DnD.Terrain;

option java_package = "DnD.Terrain";

message TileItemData {
    float posX = 1;
    float posY = 2;

    float terrainPosX = 3;
    float terrainPosY = 4;

    TileItemDataType type = 5;
}

enum TileItemDataType {
    DELETE = 0;
    UPDATE = 1;
}